--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.19.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
