--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@types/node": "^20.12.12",
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
-    "typescript": "^5.4.5",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "ts-node": "^10.9.2"
-
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
